--- a/LaGrandeEvasion.html
+++ b/LaGrandeEvasion.html
@@ -69,7 +69,7 @@
     <br/>
     <br/>
     <h2>Installation du Jeu</h2>
-    <a href="" download="LaGrandeEvasion.png"><button onclick="afficheMessage()">Projet</button></a>
+    <a href=""><button onclick="afficheMessage()">Projet</button></a>
     <a href=""><button onclick="afficheMessage()">Projet Version Allégée</button></a>
     <br/>
     <h2>Présentation du Projet</h2>
