--- a/Apropos.html
+++ b/Apropos.html
@@ -64,10 +64,10 @@
   <br/>
   <br/>
   <div class="contenu">
-    <h1>A Propos de EpiGames</h1>
+    <h1 class="police">A Propos</h1>
     <br/>
     <br/>
-    <img src=logo_entreprise.png>
+    <img src="blackepilogo.png">
     <br/>
     <h2>Présentation de l'entreprise</h2>
     <p>Notre entreprise a été créée par 5 étudiants d'EPITA, dans le cadre d'un projet de jeux-vidéos, <i><a href="LaGrandeEvasion.html">La Grande Evasion</a></i>. Nous avons voulu faire un jeu d'escape game pour notre premier jeu car ça nous paraissait assez original.<br/>Nous avons choisi EpiGames comme nom en référence à la prestigieuse entrepise <i><a href="https://www.epicgames.com">EpicGames</a></i> mais en le tournant un peu sous la forme de l'école EPITA et cela a donné EpiGames.</p>
