--- a/LaGrandeEvasion.html
+++ b/LaGrandeEvasion.html
@@ -64,9 +64,8 @@
   <br/>
   <br/>
   <div class="contenu">
-    <h1>La Grande Evasion</h1>
+    <h1 class="police">La Grande Evasion</h1>
     <img src="LOGO_LGE.png" height="450px">
-    <br/>
     <br/>
     <h2>Installation du Jeu</h2>
     <a href=""><button onclick="afficheMessage()">Projet</button></a>
