--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <br />
   <br />  
   <div class="contenu">
-    <h1 align= left>À venir...</h1>
-    <a href="LaGrandeEvasion.html"><img src="medecine.png" height="600px" align= center></a>
+    <h1 align= left>Nouveau !</h1>
+    <a href="LaGrandeEvasion.html"><img src="LOGO_LGE_remplissage.png" height="800"></a>
   <br/>
     <br/>
   </div>
