--- a/Apropos.html
+++ b/Apropos.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="theme=" dark" position="bottom-right"></script>
   <script src="script.js"></script>
-  <link rel="icon" type="images.png" sizes=16*16 href="logo_entreprise.png">
+  <link rel="icon" type="images.png" sizes=16*16 href="blackepilogo.png">
   <style>
     /* Style pour le menu déroulant */
     .dropdown {
